add map, coordinates, draggable marker. add logic to room number, room capacity and to check in time, check out time

--- a/css/style.css
+++ b/css/style.css
@@ -364,6 +364,10 @@ fieldset {
   padding-bottom: 5px;
 }
 
+.ad-form__slider {
+  width: 220px;
+}
+
 .ad-form__element input,
 .ad-form__element select,
 .ad-form__element textarea {
